--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support:design:29.0.0'
     implementation 'net.gotev:uploadservice:2.1'
+
+    implementation 'com.google.firebase:firebase-analytics:17.2.0'
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
