--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,11 @@ dependencies {
     implementation 'com.android.support:design:29.0.0'
     implementation 'net.gotev:uploadservice:2.1'
 
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-messaging:19.0.0'
+    // Add the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // Add the SDK for Firebase Cloud Messaging
+    implementation 'com.google.firebase:firebase-messaging:20.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
