--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MapsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
         <activity android:name=".ReportActivity">
 
@@ -30,11 +27,24 @@
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_maps">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".Register">
 
         </activity>
+        <activity android:name=".CleanActivity" />
+        <activity android:name=".Score"></activity>
+        <activity android:name=".Ranking"></activity>
+        <activity android:name=".CheckCheckinRequi"></activity>
+        <activity android:name=".testCame"/>
+        <activity android:name=".ChangeProfile"></activity>
+        <activity android:name=".Checkout"></activity>
+        <activity android:name=".Checkin"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
