--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,16 @@ dependencies {
     // Add the SDK for Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
     implementation 'javax.mail:mail:1.4.1'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.android.volley:volley:1.1.1'
+//    implementation files('libs/activation.jar')
+//    implementation files('libs/additionnal.jar')
+//    implementation files('libs/mail.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
