--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation project(path: ':sdk')
 //    implementation files('libs/activation.jar')
 //    implementation files('libs/additionnal.jar')
 //    implementation files('libs/mail.jar')
