--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
         <activity android:name=".MapsActivity">
 
         </activity>
@@ -39,19 +41,37 @@
         <activity android:name=".Score"></activity>
         <activity android:name=".Ranking"></activity>
         <activity android:name=".CheckCheckinRequi"></activity>
-        <activity android:name=".testCame"/>
+        <activity android:name=".testCame" />
         <activity android:name=".ChangeProfile"></activity>
         <activity android:name=".Checkout"></activity>
         <activity android:name=".Checkin"></activity>
         <activity android:name=".ForgotActivity"></activity>
         <activity android:name=".CodeChecker"></activity>
         <activity
-            android:name=".PasswordChanger" android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        </activity>
+            android:name=".PasswordChanger"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/ic_ava" />
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
     </application>
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
