--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,21 +31,22 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.android.support:design:29.0.0'
     implementation 'net.gotev:uploadservice:2.1'
-
+    implementation 'com.google.firebase:firebase-database:19.3.0'
     // Add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     // Add the SDK for Firebase Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.0.1'
     implementation 'javax.mail:mail:1.4.1'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-    implementation 'com.android.volley:volley:1.1.1'
-    implementation project(path: ':sdk')
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation 'androidx.appcompat:appcompat:1.0.2'
+//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    testImplementation 'junit:junit:4.12'
+//    androidTestImplementation 'androidx.test:runner:1.1.1'
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+//    implementation 'com.android.volley:volley:1.1.1'
+//    implementation project(path: ':sdk')
 //    implementation files('libs/activation.jar')
 //    implementation files('libs/additionnal.jar')
 //    implementation files('libs/mail.jar')
